Fixed nav styling on mobile.

--- a/portfolio/src/scss/App.scss
+++ b/portfolio/src/scss/App.scss
@@ -382,8 +382,9 @@ main {
     bottom: 0;
     width: 100%;
     height: 5rem;
-    justify-content: space-around;
+    justify-content: center;
     z-index: 1000;
+    padding-left: 0rem;
   }
 
   .logo {
